--- a/Exercise-1-problem-3-4.ipynb
+++ b/Exercise-1-problem-3-4.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -74,21 +74,34 @@
    "outputs": [],
    "source": [
     "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"data/travelTimes_2015_Helsinki.txt\", sep = \";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190359"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Check how many rows and columns there are:\n"
+    "#Check how many rows and columns there are:\n",
+    "data.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -103,7 +116,34 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   from_id    to_id      fromid_toid  route_number     at     from_x  \\\n",
+      "0  5861326  5785640  5861326_5785640             1  08:10  24.970438   \n",
+      "1  5861326  5785641  5861326_5785641             1  08:10  24.970438   \n",
+      "2  5861326  5785642  5861326_5785642             1  08:10  24.970438   \n",
+      "3  5861326  5785643  5861326_5785643             1  08:10  24.970438   \n",
+      "4  5861326  5787544  5861326_5787544             1  08:10  24.970438   \n",
+      "\n",
+      "      from_y       to_x       to_y  total_route_time  route_time  \\\n",
+      "0  60.311917  24.856034  60.399941             125.0        99.0   \n",
+      "1  60.311917  24.860568  60.400014             123.0       102.0   \n",
+      "2  60.311917  24.865102  60.400086             125.0       103.0   \n",
+      "3  60.311917  24.869636  60.400159             129.0       107.0   \n",
+      "4  60.311917  24.842582  60.397478             118.0        92.0   \n",
+      "\n",
+      "   route_distance  route_total_lines  \n",
+      "0         22917.6                2.0  \n",
+      "1         23123.5                2.0  \n",
+      "2         23241.3                2.0  \n",
+      "3         23534.2                2.0  \n",
+      "4         22428.2                2.0  \n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
@@ -132,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -148,12 +188,12 @@
    "outputs": [],
    "source": [
     "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "data = data[['from_x','from_y','to_x','to_y']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -168,7 +208,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['from_x', 'from_y', 'to_x', 'to_y']\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "print(list(data.columns))"
@@ -195,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -211,12 +259,13 @@
    "outputs": [],
    "source": [
     "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "orig_points = []\n",
+    "dest_points = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -231,7 +280,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orig_points length: 0\n",
+      "dest_points length: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
@@ -283,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -296,10 +354,31 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matti\\mambaforge\\envs\\python-gis\\lib\\site-packages\\pandas\\core\\dtypes\\cast.py:122: ShapelyDeprecationWarning: The array interface is deprecated and will no longer work in Shapely 2.0. Convert the '.coords' to a numpy array instead.\n",
+      "  arr = construct_1d_object_array_from_listlike(values)\n",
+      "C:\\Users\\Matti\\mambaforge\\envs\\python-gis\\lib\\site-packages\\pandas\\core\\dtypes\\cast.py:122: ShapelyDeprecationWarning: The array interface is deprecated and will no longer work in Shapely 2.0. Convert the '.coords' to a numpy array instead.\n",
+      "  arr = construct_1d_object_array_from_listlike(values)\n"
+     ]
+    }
+   ],
    "source": [
     "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "from shapely.geometry import Point\n",
+    "\n",
+    "def coords_to_points(x_coord,y_coord):\n",
+    "    point = Point(x_coord, y_coord)\n",
+    "    return point\n",
+    "\n",
+    "data['origin_points'] = data.apply(lambda x: coords_to_points(x['from_x'], x['from_y']),axis = 1)\n",
+    "data['dest_points'] = data.apply(lambda x: coords_to_points(x['to_x'], x['to_y']),axis = 1)\n",
+    "\n",
+    "orig_points = data['origin_points']\n",
+    "dest_points = data['dest_points']\n"
    ]
   },
   {
@@ -311,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -326,7 +405,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGIN X Y: 24.9704379 60.3119173\n",
+      "DESTINATION X Y: 24.8560344 60.3999406\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
@@ -649,9 +737,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
