--- a/Exercise-1-problem-3-4.ipynb
+++ b/Exercise-1-problem-3-4.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -371,6 +371,9 @@
     "from shapely.geometry import Point\n",
     "\n",
     "def coords_to_points(x_coord,y_coord):\n",
+    "    \"\"\"\n",
+    "    Takes coordinates as input and creates a shapely geometric Point object.\n",
+    "    \"\"\"\n",
     "    point = Point(x_coord, y_coord)\n",
     "    return point\n",
     "\n",
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -475,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -490,13 +493,12 @@
    },
    "outputs": [],
    "source": [
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "lines = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -511,7 +513,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines length: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -549,8 +559,9 @@
    },
    "outputs": [],
    "source": [
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "from shapely.geometry import LineString\n",
+    "for origin, destination in zip(orig_points, dest_points):\n",
+    "    lines.append(LineString([origin, destination]))"
    ]
   },
   {
@@ -562,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -596,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -611,13 +622,14 @@
    },
    "outputs": [],
    "source": [
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "total_length = 0\n",
+    "for line in lines:\n",
+    "    total_length+= line.length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -632,7 +644,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total length of all lines is 3148.57\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
@@ -656,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -672,13 +692,22 @@
    },
    "outputs": [],
    "source": [
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "def create_od_lines(o_point, d_point):\n",
+    "    linegeoms = []\n",
+    "    for o_point, d_point in zip(orig_points, dest_points):\n",
+    "        lines.append(LineString([o_point, d_point]))\n",
+    "    return linegeoms\n",
+    "\n",
+    "def calculate_total_distance(linegeoms):\n",
+    "    total_length = 0\n",
+    "    for line in linegeoms:\n",
+    "        total_length+= line.length\n",
+    "    return total_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -694,7 +723,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total distance 0\n"
+     ]
+    }
+   ],
    "source": [
     "# NON-EDITABLE CODE CELL FOR TESTING YOUR SOLUTION\n",
     "\n",
