Problem 3 and 4 solved

--- a/Exercise-1-problem-3-4.ipynb
+++ b/Exercise-1-problem-3-4.ipynb
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -692,22 +692,22 @@
    },
    "outputs": [],
    "source": [
-    "def create_od_lines(o_point, d_point):\n",
-    "    linegeoms = []\n",
-    "    for o_point, d_point in zip(orig_points, dest_points):\n",
-    "        lines.append(LineString([o_point, d_point]))\n",
-    "    return linegeoms\n",
+    "def create_od_lines(o_points, d_points):\n",
+    "    lines = []\n",
+    "    for origin, destination in zip(o_points, d_points):\n",
+    "        lines.append(LineString([origin, destination]))\n",
+    "    return lines\n",
     "\n",
-    "def calculate_total_distance(linegeoms):\n",
+    "def calculate_total_distance(linegeom):\n",
     "    total_length = 0\n",
-    "    for line in linegeoms:\n",
+    "    for line in linegeom:\n",
     "        total_length+= line.length\n",
     "    return total_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -728,7 +728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total distance 0\n"
+      "Total distance 3148.57\n"
      ]
     }
    ],
